--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ button.ghost {
     border-color: #FFFFFF;
 }
 
-form {
+form,.form-design {
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
